--- a/src/Styles.css
+++ b/src/Styles.css
@@ -37,11 +37,12 @@ main {
     display: grid;
     place-items: center;
     gap: 2rem;
-    padding-top: 2rem;
+    padding: 2rem 0;
 }
 .game-container {
     display: grid;
     grid-template-columns: repeat(20, 1.25rem);
+    gap: 0.1rem;
 }
 .cell {
     display: grid;
@@ -67,19 +68,10 @@ main {
     color: rgb(26, 24, 23);
 }
 
-@media screen and (min-width: 540px) {
-    .cell {
-        height: 1.75rem;
-        font-size: 1.5rem;
-    }
-    .game-container {
-        grid-template-columns: repeat(20, 1.75rem);
-    }
-}
-
 @media screen and (min-width: 720px) {
     .cell {
         height: 2rem;
+        font-size: 1.5rem;
     }
     .game-container {
         grid-template-columns: repeat(20, 2rem);
