--- a/src/Styles.css
+++ b/src/Styles.css
@@ -63,10 +63,44 @@ main {
     transition: 0.5s;
 }
 .btn:hover {
-    background-color: rgb(36, 163, 163);
-    box-shadow: inset 0 0 2px 2px rgb(26, 24, 23), 0 0 2px 1px aquamarine;
-    color: rgb(26, 24, 23);
+    background-color: blanchedalmond;
+    box-shadow: inset 0 0 2px 2px rgb(26, 24, 23), 0 0 2px 1px teal;
+    color: teal;
 }
+
+.btn-outline {
+  outline: teal solid 0.0625rem;
+  background: blanchedalmond;
+  color: teal;
+}
+
+.btn-outline:hover {
+  background: rgb(191, 107, 107);
+  color: blanchedalmond;
+}
+
+.modal-container {
+  position: absolute;
+}
+
+.lose-modal {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background: blanchedalmond;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  position: relative;
+  box-shadow: 0 0 700px 300px teal;
+}
+
+.lose-modal .actions-bar {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  padding: 0 1rem;
+}
+
 
 @media screen and (min-width: 720px) {
     .cell {
